# BI_Solution

./: .cleanup_report.json  .coverage  .env.docker  .env.docker.example  .env.example  .geminiignore  .gitignore  .gitignore_cleanup  .ignore  AGENT_FIX_REPORT_2025-12-28.md  ANALISE_ESTRUTURA_PARTE_1.md  ANALISE_ESTRUTURA_PARTE_2.md  ANALISE_ESTRUTURA_RESUMO_EXECUTIVO.md  ANALISE_PERFORMANCE_PROFUNDA.md  ARQUIVOS_CRIADOS_LISTA.md  AUDITORIA_RESUMIDA_FINAL.json  AUDIT_LOGS_SCRIPT.py  AUDIT_QUICK_CHECK.py  CHECKLIST_VALIDACAO.md  CLAUDE.md  CLEAN_TEMP_FILES.py  COMECE_AQUI.md  COMECE_AQUI.txt  COMO_INICIAR.md  CORREÇÕES_GRAFICOS_APLICADAS.md  CREDENTIALS.md  CRITICAL_FILES_CONVERSATIONAL_AI.txt  DEPLOY_STREAMLIT_CLOUD.md  DOCKER_README.md  ESTRATEGIA_MODELOS_HIBRIDOS.md  EXECUTAR_AGORA.md  EXECUTAR_INTEGRACAO.bat  FASE_1_1_RELATORIO.md  FASE_1_2_README.md  FIXES_FINAIS_RESUMO.md  FIX_ADMIN_PERMISSIONS.md  FIX_ADMIN_SIDEBAR_PERMISSIONS.md  GEMINI.md  IMPROVEMENTS_SUMMARY_2025-12-28.md  INICIAR.bat  (+135 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.streamlit/: config.toml  secrets.toml  secrets.toml.template
assets/: style.css
backend/: .dockerignore  .env.example  .gitignore  DEPENDENCY_ANALYSIS_REPORT.md  Dockerfile  QUICKSTART.md  README.md  alembic_error.txt  alembic_error_2.txt  alembic_error_3.txt  analyze_data.py  check_dependencies.py  check_imports.py  check_parquet_users.py  check_users.py  create_admin_user.py  debug_output.txt  debug_settings.py  diagnostico.py  diagnostico_output.txt  docker-compose.yml  drop_alembic_version.py  fix_supabase_admin.py  main.py  pyproject.toml  requirements-docker.txt  requirements.txt  run_migration.py  scenarios_output.txt  setup_and_run.py  simple_migration.py  start_server.py  test_agent.py  test_agent_speed.py  test_agent_system.py  test_auth_direct.py  test_chat.py  test_chatbi_scenarios.py  test_endpoints.py  test_intelligent_chatbi.py  (+7 more)
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  analytics.py  auth.py  chat.py  chat.py.backup  code_chat.py  diagnostics.py  frontend_logs.py  insights.py  learning.py  metrics.py  playground.py  rupturas.py  test.py  transfers.py
backend/app/config/: database.py  security.py  settings.py
backend/app/core/: auth_service.py  cache.py  code_rag_service.py  data_scope_service.py  data_source_manager.py  intelligent_chatbi.py  llm_factory.py  llm_gemini_adapter.py  llm_gemini_adapter_v2.py  llm_gemini_adapter_v3.py  llm_langchain_adapter.py  logging_config.py  logging_middleware.py  parquet_cache.py  query_processor.py  robust_chatbi.py  supabase_client.py  supabase_user_service.py  sync_service.py
backend/app/core/agents/: __init__.py  caculinha_bi_agent.py  code_gen_agent.py  developer_agent.py  multi_step_agent.py  product_agent.py  supervisor_agent.py  tool_agent.py
backend/app/core/factory/: component_factory.py
backend/app/core/graph/: agent.py
backend/app/core/prompts/: prompt_gerar_manifesto.md  prompt_integracao_avancada.md
backend/app/core/tools/: chart_tools.py  check_gui_dependencies.py  code_interpreter.py  date_time_tools.py  debug_server.py  flexible_query_tool.py  graph_integration.py  mcp_parquet_tools.py  mcp_sql_server_tools.py  quick_response.py  semantic_search_tool.py  sql_server_tools.py  une_tools.py  une_tools_backup_old.py  unified_data_tools.py  universal_chart_generator.py  verify_imports.py
backend/app/core/utils/: agent_cache.py  cache_cleaner.py  chart_saver.py  error_handler_backup.py  fast_path_detector.py  field_mapper.py  response_parser.py  semantic_cache.py  session_manager.py
backend/app/data/sessions/: 2c1e4ece-046e-4323-9635-671e95379242.json  355bc17d-fba5-4d95-9729-ad3390b370ed.json  5177828c-eebb-465c-9272-580df78842b1.json  7d4cd5bf-9cc7-41be-b400-44bf76f0c5cf.json  7ee2d4ea-ce23-4495-85f2-1dcc09f05b55.json  82bee385-699c-4f04-a1e3-499031a954d4.json  85411dd2-0692-4186-acf2-8b489e863367.json  a9e60fe1-59cd-436d-b6fa-a66d143975ba.json  b2b0e38a-3cfc-4261-b125-7f98677a6218.json  c322cc58-a7b7-41b5-be95-089d3c90609e.json  cache-test-1766325258.json  cache-test-1766325969.json  d94af482-5693-46ff-8fe5-8e67b75e3437.json  test-cache-1.json  test-cache-2.json  test-complex.json  test-session-001.json  test-session-002.json  test-session-1766324899.json  test-session-1766324987.json  test-session-1766325867.json
backend/app/infrastructure/data/: dependency.py  duckdb_adapter.py  hybrid_adapter.py  parquet_adapter.py  polars_dask_adapter.py  sql_server_adapter.py
backend/app/infrastructure/data/config/: column_mapping.py
backend/app/infrastructure/data/utils/: column_validator.py  query_optimizer.py
backend/app/infrastructure/database/migrations/versions/: 2b2e9327a6f7_initial.py
backend/app/infrastructure/database/models/: __init__.py  user.py
backend/app/schemas/: auth.py  user.py
backend/data/cache/semantic/: index.json
backend/data/parquet/: admmat.parquet  users.parquet
backend/scripts/: analyze_parquet.py  check_specific_users.py  create_parquet_users.py  create_users.py  inspect_parquet.py  list_segments.py  load_data.py  seed_admin.py  sync_sql_to_parquet.py  test_connection.py  update_env.py  verify_parquet_data.py
backend/tests/: conftest.py  test_chatbi_complete.py
backup_cleanup/: clear_cache.bat  limpar_cache.bat
backups/: .env.backup_20251120_143505  code_gen_agent_backup_20251029.py  interaction_test_20251120_134836.txt  streamlit_app.py.backup  streamlit_app.py.backup_20251027_162317
config/: README.md
core/: agent_state.py  auth.py  llm_adapter.py  llm_base.py  llm_service.py  permissions.py
data/: .cache_version  CATALOGO_PARA_EDICAO.json  catalog_cleaned.json  catalog_focused.json  config.json  data_catalog.json  data_catalog_enriched.json  database_structure.json  db_context.json  mcp_config.json  prompt_modular_vibe_coding.json  prompt_modular_vibe_coding_project.json  query_examples.json  query_patterns.json  query_patterns_training.json  sqlserver_mcp_config.json
demo/: demo_une_operations.py
(+1474 files in other folders)
