[project]
name = "agent-solution-bi"
version = "0.1.0"
description = ""
authors = [
    {name = "André Mauricio",email = "79088224+devAndrejr@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.13.2)",
    "aiosignal (==1.4.0)",
    "aiosqlite (==0.21.0)",
    "alembic (==1.17.2)",
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.11.0)",
    "attrs (==25.4.0)",
    "bcrypt (==5.0.0)",
    "certifi (==2025.11.12)",
    "cffi (==2.0.0)",
    "charset-normalizer (==3.4.4)",
    "choreographer (==1.2.1)",
    "click (==8.3.1)",
    "cloudpickle (==3.1.2)",
    "colorama (==0.4.6)",
    "contourpy (==1.3.3)",
    "coverage[toml] (==7.12.0)",
    "cramjam (==2.11.0)",
    "cryptography (==46.0.3)",
    "cycler (==0.12.1)",
    "dask[array,dataframe] (==2024.5.1)",
    "dask-expr (==1.1.1)",
    "deprecated (==1.3.1)",
    "distro (==1.9.0)",
    "ecdsa (==0.19.1)",
    "email-validator (==2.0.0)",
    "fastapi (==0.121.3)",
    "fastparquet (==2024.11.0)",
    "filelock (==3.20.0)",
    "fonttools (==4.60.1)",
    "frozenlist (==1.8.0)",
    "fsspec (==2025.10.0)",
    "greenlet (==3.2.4)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httptools (==0.7.1)",
    "httpx (==0.28.1)",
    "httpx-sse (==0.4.3)",
    "huggingface-hub (==0.36.0)",
    "idna (==3.11)",
    "importlib-metadata (==8.7.0)",
    "iniconfig (==2.3.0)",
    "jinja2 (==3.1.6)",
    "jiter (==0.12.0)",
    "joblib (==1.5.2)",
    "jsonpatch (==1.33)",
    "jsonpointer (==3.0.0)",
    "jsonschema (==4.25.1)",
    "jsonschema-specifications (==2025.9.1)",
    "kaleido (==1.2.0)",
    "kiwisolver (==1.4.9)",
    "langgraph-checkpoint (==3.0.1)",
    "langgraph-checkpoint-sqlite (==3.0.0)",
    "langgraph-sdk (==0.2.9)",
    "langsmith (==0.4.46)",
    "limits (==5.6.0)",
    "locket (==1.0.0)",
    "logistro (==2.0.1)",
    "mako (==1.3.10)",
    "markdown-it-py (==4.0.0)",
    "markupsafe (==3.0.3)",
    "marshmallow (==3.26.1)",
    "matplotlib (==3.10.7)",
    "mcp[cli] (==1.22.0)",
    "mdurl (==0.1.2)",
    "mpmath (==1.3.0)",
    "mssql-mcp-server (==0.1.2)",
    "multidict (==6.7.0)",
    "mypy-extensions (==1.1.0)",
    "narwhals (==2.12.0)",
    "networkx (==3.5)",
    "numpy (==1.26.4)",
    "openai (==2.8.1)",
    "orjson (==3.11.4)",
    "ormsgpack (==1.12.0)",
    "packaging (==25.0)",
    "pandas (==2.2.2)",
    "partd (==1.4.2)",
    "passlib[bcrypt] (==1.7.4)",
    "pillow (==12.0.0)",
    "plotly (==6.5.0)",
    "pluggy (==1.6.0)",
    "polars (==1.34.0)",
    "polars-runtime-32 (==1.34.0)",
    "propcache (==0.4.1)",
    "psutil (==7.1.3)",
    "pyarrow (==16.1.0)",
    "pyasn1 (==0.6.1)",
    "pycparser (==2.23)",
    "pydantic (==2.12.4)",
    "pydantic-core (==2.41.5)",
    "pydantic-settings (==2.12.0)",
    "pygments (==2.19.2)",
    "pyjwt[crypto] (==2.10.1)",
    "pyngrok (==7.5.0)",
    "pyodbc (==5.3.0)",
    "pyparsing (==3.2.5)",
    "pytest (==9.0.1)",
    "pytest-cov (==7.0.0)",
    "pytest-timeout (==2.4.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-decouple (==3.8)",
    "python-dotenv (==1.2.1)",
    "python-jose[cryptography] (==3.5.0)",
    "python-multipart (==0.0.20)",
    "pytz (==2025.2)",
    "pywin32 (==311) ; sys_platform == \"win32\"",
    "pyyaml (==6.0.3)",
    "referencing (==0.37.0)",
    "regex (==2025.11.3)",
    "requests (==2.32.5)",
    "requests-toolbelt (==1.0.0)",
    "rich (==14.2.0)",
    "rpds-py (==0.29.0)",
    "safetensors (==0.7.0)",
    "scikit-learn (==1.7.2)",
    "scipy (==1.16.3)",
    "seaborn (==0.13.2)",
    "sentence-transformers (==5.1.2)",
    "sentry-sdk (==2.45.0)",
    "shellingham (==1.5.4)",
    "simplejson (==3.20.2)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "sqlalchemy (==2.0.44)",
    "sqlite-vec (==0.1.6)",
    "sse-starlette (==3.0.3)",
    "starlette (==0.50.0)",
    "structlog (==25.5.0)",
    "sympy (==1.14.0)",
    "tenacity (==9.1.2)",
    "threadpoolctl (==3.6.0)",
    "tiktoken (==0.12.0)",
    "tokenizers (==0.22.1)",
    "toolz (==1.1.0)",
    "tqdm (==4.67.1)",
    "transformers (==4.57.1)",
    "typer (==0.20.0)",
    "typing-extensions (==4.15.0)",
    "typing-inspect (==0.9.0)",
    "typing-inspection (==0.4.2)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)",
    "uvicorn[standard] (==0.38.0)",
    "watchfiles (==1.1.1)",
    "websockets (==15.0.1)",
    "wrapt (==2.0.1)",
    "xxhash (==3.6.0)",
    "yarl (==1.22.0)",
    "zipp (==3.23.0)",
    "zstandard (==0.25.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
